--- a/themes/san-diego/source/styles/_shared-components.scss
+++ b/themes/san-diego/source/styles/_shared-components.scss
@@ -43,7 +43,7 @@
 
 // Shared byline styling
 .byline-base {
-	font-size: var(--font-size-xs);
+	font-size: var(--font-size-2xs);
 	font-weight: var(--font-weight-semibold);
 	margin-bottom: 6px;
 	text-transform: uppercase;
