--- a/themes/san-diego/source/styles/components/_mobile-tabs.scss
+++ b/themes/san-diego/source/styles/components/_mobile-tabs.scss
@@ -115,7 +115,7 @@
 			position: relative;
 			background-color: lightgrey;
 			color: white;
-			font-size: var(--font-size-xs);
+			font-size: var(--font-size-2xs);
 			font-weight: var(--font-weight-semibold);
 			padding: 3px 4px 3px 6px;
 			border-radius: 9px;
